# FlowStateV1.1

./: .gitignore  Flow state.md  FlowStatev1.1.rtf  LICENSE  README.md  test_flowstate.py
database/: schema.sql
docs/: BUILD_LOG.md  DEVLOG.md  NEXT_SESSION.md  TOOL_CONSOLIDATION.md
gui/: index.html  package-lock.json  package.json
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/database/: schema.sql
gui/src-tauri/src/: database.rs  lib.rs
gui/src/components/: ArchitectureDiagram.tsx  ConversationsView.tsx  CreateModals.tsx  Dashboard.tsx  DataBrowser.tsx  DecisionTree.tsx  ErrorBoundary.tsx  FilesView.tsx  HelpSystem.tsx  KanbanBoard.tsx  KnowledgeView.tsx  MenuBar.tsx  QuickCapture.tsx  SearchPanel.tsx  SessionsView.tsx  Settings.tsx  StoryMode.tsx  SyncStatusBar.tsx  Timeline.tsx  TodoBoard.tsx  TreeView.tsx
gui/src/hooks/: useDatabase.ts
gui/src/stores/: appStore.ts
mcp-server/: pyproject.toml  requirements.txt  run_server.sh
mcp-server/flowstate/: __init__.py  __main__.py  database.py  embeddings.py  models.py  search.py  server.py  server_v14.py  split_tools.py  story.py  tools.py
mcp-server/flowstate/tools/: __init__.py  core.py  files.py  git_ops.py  intelligence.py  learning.py  problems.py  sessions.py  story.py  todos.py  utils.py  variables.py
scripts/: mcp-switch.py  mcp-toggle  mcp-toggle.py
