[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowstate"
version = "0.1.0"
description = "Development memory system - context that flows between sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "John Martin" }
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
]

[project.scripts]
flowstate = "flowstate.server:main"

[tool.hatch.build.targets.wheel]
packages = ["flowstate"]
