[package]
name = "flowstate"
version = "1.0.0"
description = "FlowState - Development memory that flows between sessions"
authors = ["John Martin", "Claude (Anthropic)"]
license = "MIT"
edition = "2021"

[lib]
name = "flowstate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
